prevent whitespace from being wrapped in table cells

--- a/app/styles/tables.less
+++ b/app/styles/tables.less
@@ -46,6 +46,7 @@
     }
     border: none;
     word-wrap: normal;
+    white-space: nowrap;
 }
 .dt-table .table > thead > tr > th {
     border-bottom-width: 1px;
